--- a/style.css
+++ b/style.css
@@ -26,6 +26,16 @@ body ::-webkit-scrollbar-thumb {
   background: transparent;
 }
 
+.imgBox h4 {
+  font-size: 8vh;
+  font-family: 'Amatic SC', cursive !important;
+  margin: 0;
+  top: 50%;
+}
+
+h2 {
+  font-size: 3vh;
+}
 
 .imgBox h4, h3{
     text-align: center;
@@ -48,8 +58,13 @@ margin: auto;
   border-radius: 10px;
   transform: translate(-50%,-50%) perspective(2000px);
   transition: 2s;
+  
 }
 
+/* .card:hover {
+  transform: translate(-50%,-50%) perspective(2000px) scale(1);
+  box-shadow: inset 20px 0 50px rgba(0,0,0,.5), 0 10px 100px rgba(0,0,0,.5);
+} */
 
 .card:before {
   content:'';
@@ -75,12 +90,16 @@ margin: auto;
 }
 
 
-#book .cover{
+.card .imgBox {
 top: 0;
 background-image: url(borito1.png);
+background-size: contain;
 background-repeat: no-repeat;
-background-size: cover;
-background-position: absolute;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-origin: left;
+  transition: .7s;
 }
 
 .card .bark {
@@ -113,39 +132,26 @@ background-position: absolute;
   scrollbar-width: thin;
 }
 
-#book p{
-  font-size: 10px;
+.card .details p {
+  font-size: 15px;
+  /* line-height: 5px; */
+  /* transform: rotate(-10deg); */
   padding: 0 0 0 20px;
   font-family: 'MedievalSharp', cursive !important;
 }
 
-#book h4 {
+.card .details h4 {
   text-align: center;
 }
 
-#book h2 {
+.card .details h2 {
   text-align: center;
 }
 
-#book .text {
+.card .details .text {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   color: rgb(22, 22, 22);
-}
-
-
-#book .odd{
-	background-image:-webkit-linear-gradient(left, #FFF 95%, #ddd 100%);
-	background-image:-moz-linear-gradient(left, #FFF 95%, #ddd 100%);
-	background-image:-o-linear-gradient(left, #FFF 95%, #ddd 100%);
-	background-image:-ms-linear-gradient(left, #FFF 95%, #ddd 100%);
-}
-
-#book .even{
-	background-image:-webkit-linear-gradient(right, #FFF 95%, #ddd 100%);
-	background-image:-moz-linear-gradient(right, #FFF 95%, #ddd 100%);
-	background-image:-o-linear-gradient(right, #FFF 95%, #ddd 100%);
-	background-image:-ms-linear-gradient(right, #FFF 95%, #ddd 100%);
 }
